// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrUtilitySerif > default configuration > renders correctly 1`] = `
<p
  class="cdr-utility-serif"
  style="--cdr-utility-serif-font-size: var(--cdr-type-scale-1); --cdr-utility-serif-line-height: calc(var(--cdr-type-scale-1) * var(--cdr-utility-serif-line-height-ratio)); --cdr-utility-serif-font-weight: 400;"
>
  
  paragraph
  
</p>
`;

exports[`CdrUtilitySerif > passing a scale > renders correctly 1`] = `
<p
  class="cdr-utility-serif"
  style="--cdr-utility-serif-font-size: var(--cdr-type-scale--1); --cdr-utility-serif-line-height: calc(var(--cdr-type-scale--1) * var(--cdr-utility-serif-line-height-ratio)); --cdr-utility-serif-font-weight: 400;"
>
  
  paragraph
  
</p>
`;

exports[`CdrUtilitySerif > setting to strong variant > renders correctly 1`] = `
<p
  class="cdr-utility-serif"
  style="--cdr-utility-serif-font-size: var(--cdr-type-scale-1); --cdr-utility-serif-line-height: calc(var(--cdr-type-scale-1) * var(--cdr-utility-serif-line-height-ratio)); --cdr-utility-serif-font-weight: 600;"
>
  
  paragraph
  
</p>
`;
